mdapipkg/objects/Quotation__c.object
<CustomObject>
    <fields>
        <fullName>Agreed_Price__c</fullName>
        <label>Agreed Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Volume__c</fullName>
        <label>Agreed Volume</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_or_Nothing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>All or Nothing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_Price__c</fullName>
        <label>Ask Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ask_Volume__c</fullName>
        <label>Ask Volume</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Price__c</fullName>
        <label>Bid Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Volume__c</fullName>
        <label>Bid Volume</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Consumer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotation (Consumer)</relationshipLabel>
        <relationshipName>Quotation_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination</label>
        <referenceTo>Destination__c</referenceTo>
        <relationshipLabel>Quotation</relationshipLabel>
        <relationshipName>Quotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Factory_Symbol__c</fullName>
        <formula>Factory__r.Factory_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factory Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory__c</fullName>
        <label>Factory</label>
        <referenceTo>Factory__c</referenceTo>
        <relationshipLabel>Quotation</relationshipLabel>
        <relationshipName>Quotation</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Favorite_Consumer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favorite Consumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favorite Producer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grade</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quotation</relationshipLabel>
        <relationshipName>Quotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packing</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quotation (Packing)</relationshipLabel>
        <relationshipName>Quotation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Term</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Quotation</relationshipLabel>
        <relationshipName>Quotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <formula>Factory__r.Port__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Port</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <label>Producer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Producer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotation</relationshipLabel>
        <relationshipName>Quotation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quotation_Status__c</fullName>
        <label>Quotation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pulled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Counter</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Done Deal</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Effective_Month__c</fullName>
        <label>Quote Effective Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.User_Type__c</field>
                <operation>equals</operation>
                <value>Producer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Information</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Quotation</relationshipLabel>
        <relationshipName>Quotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quotation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Grade__c</columns>
        <columns>Factory_Symbol__c</columns>
        <columns>Quotation_Status__c</columns>
        <columns>Ask_Price__c</columns>
        <columns>Ask_Volume__c</columns>
        <columns>Agreed_Price__c</columns>
        <columns>Consumer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000000}</displayFormat>
        <label>Quotation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>